tests/semantic/invalid/01_undecl_var.tc
// ERR_UNDECLARED_IDENT: use of undeclared variable x
int main(void) {
    int y = x;
    return 0;
}
